Fix z-index of sidebar. Fixes #3100

--- a/app/src/sass/nav/_secondary.scss
+++ b/app/src/sass/nav/_secondary.scss
@@ -14,7 +14,7 @@
 #navpage-secondary {
     visibility: visible;
     display: block;
-    z-index: 10;
+    z-index: 200;
     position: absolute;
     width: $nav-secondary-small-width;
     padding-top: $nav-secondary-top-padding;
